commit 170ca8d9fe3057caaa861991417e427738e978c7
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 18:30:56 2015 -0430

    Agregando font awesome

commit 9efdff6b0492605de94f6ff48047378d8f1f6f13
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 16:13:23 2015 -0430

    cambios menores en el css

commit 15c78111f861e2c7d0bc98736fc9571e0a986d73
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 15:58:35 2015 -0430

    se elimina referencia a google fonts

commit 35cdba8c4c72a18ef1c61552ea913a2fd951bc9c
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 15:52:04 2015 -0430

    Actualizando CSS

commit bc18dbc18bfb9bddf4089fc6f286de80561a872e
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 15:27:04 2015 -0430

    FIX

commit d0d287b1aaffbdfc627b92182aea13e999b47973
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 15:20:14 2015 -0430

    FIX

commit fe411b06f242105a0121a3ba787c026b3595d6d5
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 15:19:58 2015 -0430

    FIX

commit 5c01450a13e44fa8aea3dbe0f3e079b82837f99f
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 15:04:51 2015 -0430

    Agregada base64 img del header, agregada clase para el boton de planeta vaslibre

commit d8bac63b874bc95a6d3900f269b0f86d65c7caaa
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 14:47:14 2015 -0430

    removiendo "pagination an flip ahead browsing"

commit c6fb1d56a3aef998cc6cd8b8a73a63330cdd4168
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 14:43:27 2015 -0430

    Removiendo "pagination an flip ahead browsing"

commit 40a2076871619960324eb1cce75ef36916684fef
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 14:38:28 2015 -0430

    pagination an flip ahead browsing

commit d27ce061e95dca82549cf17d169d048b5eeadae3
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 14:30:31 2015 -0430

    Agregando cambios en meta tags

commit d13a08c9d20d53c2e3cf4025d8cf75d4c536c73e
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 13:33:18 2015 -0430
