@@ -3,119 +3,116 @@
 <head>
     <meta charset="utf-8">
     <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
-    <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/normalize.min.css" />
-    <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/screen.min.css" />
-    <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/normalize.min.css"/>
+    <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/screen.min.css"/>
+    <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/font-awesome.min.css"/>
     <link rel="publisher" href="{{ PUBLISHER }}"/>
     <link rel="apple-touch-startup-image" href="{{ SITEURL }}/theme/images/logo.png">
-    <link type="text/plain" rel="socialmedia" href="{{ SITEURL }}/socialmedia.txt" />
+    <link type="text/plain" rel="socialmedia" href="{{ SITEURL }}/socialmedia.txt"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta http-equiv="imagetoolbar" content="no">
-    <meta http-equiv="pragma" content="cache" />
-    <meta http-equiv="cache-control" content="cache" /> 
-    <meta http-equiv="vary" content="content-language" />
-    <meta http-equiv="content-style-type" content="text/css" />    
+    <meta http-equiv="pragma" content="cache"/>
+    <meta http-equiv="cache-control" content="cache"/>
+    <meta http-equiv="vary" content="content-language"/>
+    <meta http-equiv="Cache-control" content="max-age=17280, public">
+    <meta http-equiv="content-style-type" content="text/css"/>
     <meta name="application-name" content="{{ SITENAME }}"/>
-    <meta name="HandheldFriendly" content="True" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+    <meta name="HandheldFriendly" content="True"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="google-site-verification" content="{{ GOOGLE_SV }}" />
+    <meta name="google-site-verification" content="{{ GOOGLE_SV }}"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="medium" content="mult">
-    <meta name="adblock" content="disable" />
-    <meta name="rating" content="General" />
-    <meta name="resource-type" content="document" />
-    <meta name="revisit-after" content="1 days" />
-    <meta name="revisit" content="1" />
-    <meta name="robots" content="index,follow" />
-    <meta name="no-email-collection" content="http://www.unspam.com/noemailcollection/" />
+    <meta name="adblock" content="disable"/>
+    <meta name="rating" content="General"/>
+    <meta name="resource-type" content="document"/>
+    <meta name="revisit-after" content="1 days"/>
+    <meta name="revisit" content="1"/>
+    <meta name="robots" content="index,follow"/>
+    <meta name="no-email-collection" content="http://www.unspam.com/noemailcollection/"/>
 {# Open Graph tags #}
     {% if USE_OPEN_GRAPH is not defined %}
         {% set USE_OPEN_GRAPH = False %}
     {% endif %}
 {% if USE_OPEN_GRAPH %}
-<!-- Open Graph tags -->
 {% if OPEN_GRAPH_FB_APP_ID %}
     <meta property="fb:app_id" content="{{ OPEN_GRAPH_FB_APP_ID }}"/>
 {% endif %}
-    <meta name="twitter:card" content="summary"> 
+    <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@{{ TWITTER_USERNAME }}">
-    <meta property="og:site_name" content="{{ SITENAME }}" />
-    <meta property="og:locale" content="{{ SITE_LANG }}" />
-    <meta property="og:locale:alternate" content="{{ SITE_LANG_ALTERNATE }}" />
+    <meta property="og:site_name" content="{{ SITENAME }}"/>
+    <meta property="og:locale" content="{{ SITE_LANG }}"/>
+    <meta property="og:locale:alternate" content="{{ SITE_LANG_ALTERNATE }}"/>
     {% if article %}
     <link rel="canonical" href="{{ SITEURL }}/{{ article.url }}">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="300">
-    <meta property="og:image:height" content="300">     
+    <meta property="og:image:height" content="300">
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="{{ article.title|striptags }}"/>
-    <meta property="og:url" content="{{ SITEURL }}/{{ article.url }}"/> 
+    <meta property="og:url" content="{{ SITEURL }}/{{ article.url }}"/>
     <meta property="og:description" content="{{ article.summary|striptags|escape }}"/>
-    <meta property="article:published_time" content="{{ article.date.strftime("%Y-%m-%d") }}" />
+    <meta property="article:published_time" content="{{ article.date.strftime("%Y-%m-%d") }}"/>
     <meta name="twitter:title" content="{{ article.title|striptags }}">
-    <meta name="twitter:description" content="{{ article.summary|striptags|escape }}">  
+    <meta name="twitter:description" content="{{ article.summary|striptags|escape }}">
     <meta name="description" content="{{ article.summary|striptags|escape }}">
     <meta name="twitter:creator" content="@{{ article.twitter }}">
-    <meta name="twitter:image" content="{{ article.image }}">  
+    <meta name="twitter:image" content="{{ article.image }}">
     <meta property="og:image" content="{{ article.image }}"/>
-    <!-- Dublin Core Metatags -->
-    <meta name="dcterms.title" content="{{ article.title|striptags }}" />
-    <meta name="dcterms.description" content="{{ article.summary|striptags|escape }}" />
-    <meta name="dcterms.language" content="es" />
-    <meta name="dcterms.type" content="post" />
-    <meta name="dcterms.source" content="{{ SITEURL }}/{{ article.url }}" />
-    <meta name="dcterms.publisher" content="{{ article.twitter }}" />  
+    <meta name="dcterms.title" content="{{ article.title|striptags }}"/>
+    <meta name="dcterms.description" content="{{ article.summary|striptags|escape }}"/>
+    <meta name="dcterms.language" content="es"/>
+    <meta name="dcterms.type" content="post"/>
+    <meta name="dcterms.source" content="{{ SITEURL }}/{{ article.url }}"/>
+    <meta name="dcterms.publisher" content="{{ article.twitter }}"/>
     {% if article.category %}
-    <meta property="article:section" content="{{ article.category }}" />
+    <meta property="article:section" content="{{ article.category }}"/>
     {% endif %}
     {% for tag in article.tags %}
-    <meta property="article:tag" content="{{ tag }}" />
+    <meta property="article:tag" content="{{ tag }}"/>
     {% endfor %}
     {% if article.author %}
-    <meta property="article:author" content="{{ article.author }}" />
+    <meta property="article:author" content="{{ article.author }}"/>
     {% endif %}
     {% elif page %}
-    <link rel="canonical" href="{{ SITEURL }}/{{ page.url }}">    
+    <link rel="canonical" href="{{ SITEURL }}/{{ page.url }}">  
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="{{ page.title }}"/>
     <meta property="og:url" content="{{ SITEURL }}/{{ page.url }}"/>
     <meta property="og:image" content="{{ SITEURL }}/theme/images/logo.png" />
-    <meta name="twitter:image" content="{{ SITEURL }}/theme/images/logo.png" /> 
+    <meta name="twitter:image" content="{{ SITEURL }}/theme/images/logo.png" />
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="300">
-    <meta property="og:image:height" content="300">   
-    <!-- Dublin Core Metatags -->
-    <meta name="dcterms.title" content="{{ page.title }}" />
-    <meta name="dcterms.description" content="{{ SITE_DESCRIPTION }}" />
-    <meta name="dcterms.language" content="es" />
-    <meta name="dcterms.type" content="page" />
-    <meta name="dcterms.source" content="{{ SITEURL }}/{{ page.url }}" />
-    <meta name="dcterms.publisher" content="{{ AUTHOR }}" />    
+    <meta property="og:image:height" content="300">
+    <meta name="dcterms.title" content="{{ page.title }}"/>
+    <meta name="dcterms.description" content="{{ SITE_DESCRIPTION }}"/>
+    <meta name="dcterms.language" content="es"/>
+    <meta name="dcterms.type" content="page"/>
+    <meta name="dcterms.source" content="{{ SITEURL }}/{{ page.url }}"/>
+    <meta name="dcterms.publisher" content="{{ AUTHOR }}"/>
     {% else %}
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="{{ SITENAME }}"/>
     <meta property="og:url" content="{{ SITEURL }}"/>
     <meta property="og:description" content="{{ SITE_DESCRIPTION }}"/>
-    <link rel="canonical" href="{{ SITEURL }}">    
-    <meta property="og:image" content="{{ SITEURL }}/theme/images/logo.png" />
-    <meta name="twitter:image" content="{{ SITEURL }}/theme/images/logo.png" /> 
+    <link rel="canonical" href="{{ SITEURL }}">
+    <meta property="og:image" content="{{ SITEURL }}/theme/images/logo.png"/>
+    <meta name="twitter:image" content="{{ SITEURL }}/theme/images/logo.png"/>
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
-    <meta name="description" content="{{ SITE_DESCRIPTION }}"> 
-    <!-- Dublin Core Metatags -->
-    <meta name="dcterms.title" content="{{ SITENAME }}" />
-    <meta name="dcterms.description" content="{{ SITE_DESCRIPTION }}" />
-    <meta name="dcterms.language" content="es" />
-    <meta name="dcterms.type" content="frontpage" />
-    <meta name="dcterms.identifier" content="0" />
-    <meta name="dcterms.source" content="{{ SITEURL }}" />
-    <meta name="dcterms.publisher" content="{{ AUTHOR }}" />   
+    <meta name="description" content="{{ SITE_DESCRIPTION }}">
+    <meta name="dcterms.title" content="{{ SITENAME }}"/>
+    <meta name="dcterms.description" content="{{ SITE_DESCRIPTION }}"/>
+    <meta name="dcterms.language" content="es"/>
+    <meta name="dcterms.type" content="frontpage"/>
+    <meta name="dcterms.identifier" content="0"/>
+    <meta name="dcterms.source" content="{{ SITEURL }}"/>
+    <meta name="dcterms.publisher" content="{{ AUTHOR }}"/>
     {% if OPEN_GRAPH_IMAGE %}
-    <meta property="og:image" content="{{ SITEURL }}/theme/images/logo.png" />
-    <meta name="twitter:image" content="{{ SITEURL }}/theme/images/logo.png" /> 
+    <meta property="og:image" content="{{ SITEURL }}/theme/images/logo.png"/>
+    <meta name="twitter:image" content="{{ SITEURL }}/theme/images/logo.png"/>
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
@@ -123,23 +120,23 @@
     {% endif %}
 {% endif %}    
 {% if FEED_RSS %}
-    <link href="{{ SITEURL }}/{{ FEED_RSS }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} RSS Feed" />
+    <link href="{{ SITEURL }}/{{ FEED_RSS }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} RSS Feed"/>
 {% endif %}
 <!-- icons -->
-    <link rel="apple-touch-icon" sizes="152x152" href="{{ SITEURL }}/theme/images/apple-touch-icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="{{ SITEURL }}/theme/images/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="{{ SITEURL }}/theme/images/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="{{ SITEURL }}/theme/images/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="{{ SITEURL }}/theme/images/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="{{ SITEURL }}/theme/images/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="{{ SITEURL }}/theme/images/apple-touch-icon-60x60.png" />
-    <link rel="apple-touch-icon" sizes="57x57" href="{{ SITEURL }}/theme/images/apple-touch-icon-57x57.png" />  
-    <link rel="icon" type="image/png" href="{{ SITEURL }}/theme/images/favicon-196x196.png" sizes="196x196" />
-    <link rel="icon" type="image/png" href="{{ SITEURL }}/theme/images/favicon-160x160.png" sizes="160x160" />
-    <link rel="icon" type="image/png" href="{{ SITEURL }}/theme/images/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/png" href="{{ SITEURL }}/theme/images/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="{{ SITEURL }}/theme/images/favicon-16x16.png" sizes="16x16" />
-    <link rel="shortcut icon" href="{{ SITEURL }}/theme/images/favicon.ico">    
+    <link rel="apple-touch-icon" sizes="152x152" href="{{ SITEURL }}/theme/images/apple-touch-icon-152x152.png"/>
+    <link rel="apple-touch-icon" sizes="144x144" href="{{ SITEURL }}/theme/images/apple-touch-icon-144x144.png"/>
+    <link rel="apple-touch-icon" sizes="114x114" href="{{ SITEURL }}/theme/images/apple-touch-icon-114x114.png"/>
+    <link rel="apple-touch-icon" sizes="120x120" href="{{ SITEURL }}/theme/images/apple-touch-icon-120x120.png"/>
+    <link rel="apple-touch-icon" sizes="76x76" href="{{ SITEURL }}/theme/images/apple-touch-icon-76x76.png"/>
+    <link rel="apple-touch-icon" sizes="72x72" href="{{ SITEURL }}/theme/images/apple-touch-icon-72x72.png"/>
+    <link rel="apple-touch-icon" sizes="60x60" href="{{ SITEURL }}/theme/images/apple-touch-icon-60x60.png"/>
+    <link rel="apple-touch-icon" sizes="57x57" href="{{ SITEURL }}/theme/images/apple-touch-icon-57x57.png"/>
+    <link rel="icon" type="image/png" href="{{ SITEURL }}/theme/images/favicon-196x196.png" sizes="196x196"/>
+    <link rel="icon" type="image/png" href="{{ SITEURL }}/theme/images/favicon-160x160.png" sizes="160x160"/>
+    <link rel="icon" type="image/png" href="{{ SITEURL }}/theme/images/favicon-96x96.png" sizes="96x96"/>
+    <link rel="icon" type="image/png" href="{{ SITEURL }}/theme/images/favicon-32x32.png" sizes="32x32"/>
+    <link rel="icon" type="image/png" href="{{ SITEURL }}/theme/images/favicon-16x16.png" sizes="16x16"/>
+    <link rel="shortcut icon" href="{{ SITEURL }}/theme/images/favicon.ico">
 <!--/ icons -->
     <script type="text/javascript">
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -152,13 +149,13 @@
     </script>
 </head>   
 <body id="index" class="home" itemscope itemtype="http://schema.org/WebPage">
-    <meta itemprop="name" content="{{ SITENAME }}" />
+    <meta itemprop="name" content="{{ SITENAME }}"/>
     <meta itemprop="url" content="{{ SITEURL }}"/>
-    <meta itemprop="headline" content="{{ SITENAME }} || {{ TAG_LINE }}" />
-    <meta itemprop="description about" content="{{ SITE_DESCRIPTION }}" />
+    <meta itemprop="headline" content="{{ SITENAME }} || {{ TAG_LINE }}"/>
+    <meta itemprop="description about" content="{{ SITE_DESCRIPTION }}"/>
     <meta itemprop="keywords" content="gnu, linux, software libre, código abierto, tecnología"/>
-    <meta itemprop="primaryImageOfPage" content="{{ SITEURL }}/theme/images/logo.png" />
-    <meta itemprop="inLanguage" content="es" />    
+    <meta itemprop="primaryImageOfPage" content="{{ SITEURL }}/theme/images/logo.png"/>
+    <meta itemprop="inLanguage" content="es"/>    
     <header id="site-head" itemscope itemtype="http://schema.org/WPHeader">
         <h1 class="blog-title" itemprop="headline">
             <a href="{{ SITEURL }}">{{ SITENAME }}</a>
