@@ -1,3 +1,9 @@
+commit aceb3122a8358d621ff5e92d3983de32ed90d0be
+Author: abr4xas <me@abr4xas.org>
+Date:   Fri Jan 16 18:31:58 2015 -0430
+
+    Agregando font awesome
+
 commit 170ca8d9fe3057caaa861991417e427738e978c7
 Author: abr4xas <me@abr4xas.org>
 Date:   Fri Jan 16 18:30:56 2015 -0430
